# chess_engine

./: Training Data Sample.csv  Training Data.csv  Training Log 1  Training Log 2  bindings.py  convert_csv.py  find_bin.py  game.py  generate_binaries.sh  graph.py  readme.txt  test.py
env/: pyvenv.cfg
src/: CMakeLists.txt  Pass 1.agent  agent.h  api.cc  api.h  bitboard.cc  bitboard.h  error.h  evaluate.h  game.cpp  game.h  game.tcc  internal.h  main.cpp  perft.h  pseudolegal_move_calculator.cc  pseudolegal_move_calculator.h  pst.h  train.h  zobrist.h
src/agents/: random.h  weighted.h
src/magic/: moves.cc  moves.h  readme.txt
static/: index.css  index.html
static/scripts/: index.js
